--- a/templates/tutorial/member/index.html
+++ b/templates/tutorial/member/index.html
@@ -1,51 +1,54 @@
 {% extends "tutorial/index.html" %}
 {% load humanize %}
 
-{% block headline_sub-actions %}
+
+
+{% block sidebar_actions %}
     <li><a href="{% url "zds.tutorial.views.import_tuto" %}">Importer</a></li>
 {% endblock %}
+
+
 
 {% block sidebar_actions %}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
         <h3><span class="wide">Filtres</span></h3>
         <ul>
-            <li><a href="{% url "zds.member.views.tutorials" %}">All</a></li>
-            <li><a href="{% url "zds.member.views.tutorials" %}?type=public">Public</a></li>
-            <li><a href="{% url "zds.member.views.tutorials" %}?type=draft">Draft</a><li>
+            <li><a href="{% url "zds.member.views.tutorials" %}">Tous</a></li>
+            <li><a href="{% url "zds.member.views.tutorials" %}?type=public">Publics</a></li>
+            <li><a href="{% url "zds.member.views.tutorials" %}?type=draft">Brouillons</a><li>
         </ul>
     </div>
 {% endblock %}
 
-{% block content-filter %}
-    {% if type = 'public' and tuto.on_line %}
-        <a href="{{ tuto.get_absolute_url_online }}">{{ tuto.title }}</a>
-    {% else %}
-        <a href="{{ tuto.get_absolute_url }}">{{ tuto.title }}</a>
-    {% endif %}
-{% endblock %}
+
 
 {% block content %}
-
     {% if tutorials %}
         {% for tuto in tutorials %}
-        <article>
-            <a href="{{ tuto.get_absolute_url }}">
-                {% if tuto.image %}
-                <img src="{{tuto.image.thumb.url }}" alt="" class="tutorial-img avatar"/>
-                {% endif %}
-                <div class="tutorial-infos">
-                    <h3>{{ tuto.title }}</h3>
-                    <p class="article-metadata">
-                        crée {{tuto.create_at|naturaltime}}
-                    </p>
-                </div>
-            </a>
-        </article>
+            <article>
+                <a href="
+                    {% if type = 'public' and tuto.on_line %}
+                        {{ tuto.get_absolute_url_online }}
+                    {% else %}
+                        {{ tuto.get_absolute_url }}
+                    {% endif %}
+                ">
+                    {% if tuto.image %}
+                        <img src="{{tuto.image.thumb.url }}" alt="" class="tutorial-img avatar">
+                    {% endif %}
+                    
+                    <div class="tutorial-infos">
+                        <h3>{{ tuto.title }}</h3>
+                        <p class="article-metadata">
+                            crée {{ tuto.create_at|naturaltime }}
+                        </p>
+                    </div>
+                </a>
+            </article>
         {% endfor %}
     {% else %}
         <p>
             Aucun tutoriel disponible.
         </p>
     {% endif %}
-
 {% endblock %}
