--- a/templates/tutorial/tutorial/edit.html
+++ b/templates/tutorial/tutorial/edit.html
@@ -1,80 +1,89 @@
 {% extends "tutorial/base.html" %}
 {% load crispy_forms_tags %}
 
+
+
 {% block title %}
     Éditer le tutoriel
 {% endblock %}
 
+
+
 {% block headline %}
     <h1 class="illu">
         {% if tutorial.image %}
-            <img src="{{tutorial.image.thumb.url }}" alt=""/>
+            <img src="{{tutorial.image.thumb.url }}" alt="">
         {% endif %}
         Editer le tutoriel : {{ tutorial.title }}
     </h1>
 {% endblock %}
 
+
+
 {% block headline_sub %}
     {{ tutorial.description }}
 {% endblock %}
 
+
+
 {% block breadcrumb %}
     <li><a href="{{ tutorial.get_absolute_url }}">{{ tutorial.title }}</a></li>
-    <li><a href="#">Éditer le tutoriel</a></li>
+    <li>Éditer le tutoriel</li>
 {% endblock %}
 
+
+
 {% block content %}
+    {# TODO : Tout est à refaire ici :( #}
+    <div class="row">
+        <div class="large-6 columns">
+            <h2>Général</h2>
+            {% crispy form %}
+        </div>
+        <div class="large-6 columns">
+            <h2>Auteurs</h2>
 
-<div class="row">
-    <div class="large-6 columns">
-        <h2>Général</h2>
-        {% crispy form %}
-    </div>
-    <div class="large-6 columns">
-        <h2>Auteurs</h2>
-
-        <form action="{% url "zds.tutorial.views.modify_tutorial" %}" method="post">
-            <div class="row collapse">
-                <div class="small-10 columns">
-                    <input type="text" name="author" placeholder="Nom de l'utilisateur à ajouter…" />
+            <form action="{% url "zds.tutorial.views.modify_tutorial" %}" method="post">
+                <div class="row collapse">
+                    <div class="small-10 columns">
+                        <input type="text" name="author" placeholder="Nom de l'utilisateur à ajouter…" />
+                    </div>
+                    <div class="small-2 columns">
+                        <button type="submit" class="button" name="add_author">
+                            Ajouter
+                        </button>
+                    </div>
                 </div>
-                <div class="small-2 columns">
-                    <button type="submit" class="button" name="add_author">
-                        Ajouter
-                    </button>
-                </div>
-            </div>
-            <input type="hidden" name="tutorial" value="{{ tutorial.pk }}" />
-            {% csrf_token %}
-        </form>
+                <input type="hidden" name="tutorial" value="{{ tutorial.pk }}" />
+                {% csrf_token %}
+            </form>
 
-        <form action="{% url "zds.tutorial.views.modify_tutorial" %}" method="post">
-            <table>
-                <thead>
-                    <th>Auteur</th>
-                    <th>Actions</th>
-                </thead>
-                <tbody>
-                    {% for member in tutorial.authors.all %}
-                        <tr>
-                            <td>{% include "misc/member_item.part.html" %}</td>
-                            <td>
-                                {% if tutorial.authors.count > 1 %}
-                                <button type="submit" name="author" value="{{ member.pk }}">
-                                    Supprimer
-                                </button>
-                                {% endif %}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            <input type="hidden" name="remove_author" value="1" />
-            <input type="hidden" name="tutorial" value="{{ tutorial.pk }}" />
-            {% csrf_token %}
-        </form>
+            <form action="{% url "zds.tutorial.views.modify_tutorial" %}" method="post">
+                <table>
+                    <thead>
+                        <th>Auteur</th>
+                        <th>Actions</th>
+                    </thead>
+                    <tbody>
+                        {% for member in tutorial.authors.all %}
+                            <tr>
+                                <td>{% include "misc/member_item.part.html" %}</td>
+                                <td>
+                                    {% if tutorial.authors.count > 1 %}
+                                    <button type="submit" name="author" value="{{ member.pk }}">
+                                        Supprimer
+                                    </button>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                <input type="hidden" name="remove_author" value="1" />
+                <input type="hidden" name="tutorial" value="{{ tutorial.pk }}" />
+                {% csrf_token %}
+            </form>
 
+        </div>
     </div>
-</div>
-
 {% endblock %}
