--- a/templates/tutorial/part/new.html
+++ b/templates/tutorial/part/new.html
@@ -1,9 +1,13 @@
 {% extends "tutorial/base.html" %}
 {% load crispy_forms_tags %}
 
+
+
 {% block title %}
     Nouvelle partie
 {% endblock %}
+
+
 
 {% block headline %}
     <h1 class="illu">
@@ -11,17 +15,15 @@
     </h1>
 {% endblock %}
 
+
+
 {% block breadcrumb %}
     <li><a href="{{ tutorial.get_absolute_url }}">{{ tutorial.title }}</a></li>
-    <li><a href="#">Nouvelle partie</a></li>
+    <li>Nouvelle partie</li>
 {% endblock %}
 
+
+
 {% block content %}
-
-<div class="row">
-    <div class="large-12 columns">
-        {% crispy form %}
-    </div>
-</div>
-
+    {% crispy form %}
 {% endblock %}
