--- a/templates/tutorial/tutorial/diff.html
+++ b/templates/tutorial/tutorial/diff.html
@@ -3,62 +3,71 @@
 {% load humanize %}
 {% load repo_reader %}
 
+
+
 {% block title %}
-{{ tutorial.title }}
+    {{ tutorial.title }}
 {% endblock %}
+
+
+
+{% block breadcrumb %}
+    <li><a href="{{ tutorial.get_absolute_url }}">{{ tutorial.title }}</a></li>
+    <li>Historique</li>
+{% endblock %}
+
+
 
 {% block sidebar %}
 {% endblock %}
+
+
+
 {% block headline %}
     <h1 class="illu">
         {% if tutorial.image %}
-            <img src="{{tutorial.image.thumb.url }}" alt=""/>
+            <img src="{{tutorial.image.thumb.url }}" alt="">
         {% endif %}
         {{ tutorial.title }}
     </h1>
+
     <ul class="taglist">
-    {% for category in tutorial.subcategory.all %}
-        <li><a href="#">{{ category.title }}</a></li>
-    {% endfor %}
+        {% for category in tutorial.subcategory.all %}
+            {# TODO : mettre les liens vers les tags #}
+            <li><a href="#">{{ category.title }}</a></li>
+        {% endfor %}
     </ul>
     
     <div class="authors content-wrapper">
         <span class="authors-label">Auteurs : </span>
         <ul>
-        {% for member in tutorial.authors.all %}
-            <li>
-                {% include "misc/member_item.part.html" %}
-            </li>
-        {% endfor %}.
+            {% for member in tutorial.authors.all %}
+                <li>
+                    {% include "misc/member_item.part.html" %}
+                </li>
+            {% endfor %}
         </ul>
     </div>
 {% endblock %}
 
-{% block breadcrumb %}
-    <li><a href="{{ tutorial.get_absolute_url }}">{{ tutorial.title }}</a></li>
-    <li><a href="#">Historique</a></li>
-{% endblock %}
 
-{% block sidebar_actions %}
-{% endblock %}
 
 {% block content %}
-<h2>Nouveaux Fichiers</h2>
-{% for add in path_add %}
-    {% with add_next=add.b_blob|repo_blob %}
-    <h3>{{ add.a_blob.path }}</h3>
-    {{ ''|diff_text:add_next|safe }}
-    {% endwith %}
-{% endfor %}
+    <h2>Nouveaux Fichiers</h2>
+    {% for add in path_add %}
+        {% with add_next=add.b_blob|repo_blob %}
+            <h3>{{ add.a_blob.path }}</h3>
+            {{ ''|diff_text:add_next|safe }}
+        {% endwith %}
+    {% endfor %}
 
-<h2>Fichiers Modifiés</h2>
-{% for maj in path_maj %}
-    {% with maj_next=maj.b_blob|repo_blob %}
-    {% with maj_prev=maj.a_blob|repo_blob %}
-    <h3>{{ maj.a_blob.path }}</h3>
-    {{ maj_prev|diff_text:maj_next|safe }}
-    {% endwith %}
-    {% endwith %} 
-{% endfor %}
-
+    <h2>Fichiers Modifiés</h2>
+    {% for maj in path_maj %}
+        {% with maj_next=maj.b_blob|repo_blob %}
+            {% with maj_prev=maj.a_blob|repo_blob %}
+                <h3>{{ maj.a_blob.path }}</h3>
+                {{ maj_prev|diff_text:maj_next|safe }}
+            {% endwith %}
+        {% endwith %} 
+    {% endfor %}
 {% endblock %}
