--- a/templates/tutorial/validation/index.html
+++ b/templates/tutorial/validation/index.html
@@ -1,24 +1,27 @@
 {% extends "tutorial/base.html" %}
 {% load humanize %}
 
+
+
 {% block title %}
     Liste des tutoriels soumis en validation
 {% endblock %}
 
-{% block meta %}
-    <meta name="description" content="Les tutoriels vous permettent d'apprendre
-    sur divers sujets axés autour de la programmation et de l'informatique." />
-{% endblock %}
 
-{% block headline %}
-    <h1>Liste des tutoriels soumis en validation</h1>
-{% endblock %}
 
 {% block breadcrumb %}
     <li>Tutoriels en attente de validation</li>
 {% endblock %}
 
-{% block sidebar_actions %}
+
+
+{% block headline %}
+    <h1>Liste des tutoriels soumis en validation</h1>
+{% endblock %}
+
+
+
+{% block sidebar_blocs %}
     <h3>Navigation</h3>
     <ul>
         <li>
@@ -39,14 +42,10 @@
     </ul>
 {% endblock %}
 
+
+
 {% block content %}
-<div class="row">
-    <div class="large-12 columns">
-    </div>
-</div>
-<div class="row">
-    <div class="large-12 columns">
-        {% if validations %}
+    {% if validations %}
         <table>
             <thead>
                 <tr>
@@ -61,54 +60,51 @@
             </thead>
             <tbody>
                 {% for validation in validations %}
-                <tr>
-                    <td>
-                        <a href="{% url "zds.tutorial.views.view_tutorial" validation.tutorial.pk validation.tutorial.slug %}?version={{ validation.version }}" >{{ validation.tutorial.title }}</a>
-                    </td>
-                    <td>
-                        {% for subcategory in validation.tutorial.subcategory.all %}
-                        <p>
-                            <a href="{% url "zds.tutorial.views.list_validation" %}?subcategory={{subcategory.pk}}">{{ subcategory.title }}</a>
-                        </p>
-                        {% endfor %}
-                    </td>
-                    <td>
-                        {% for author in validation.tutorial.authors.all %}
-                        <a href="{% url "zds.member.views.details" user.username %}">{{ author.username }}</a>
-                        {% endfor %}
-                    </td>
-                    <td>
-                        <span>{{ validation.date_proposition|naturaltime }}</span>
-                    </td>
-                    <td>
-                        {% if validation.validator %}
-                        <a href="{% url "zds.member.views.details" validation.validator.username %}">{{ validation.validator.username }}</a>
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if validation.date_reserve %}
-                        <span>{{ validation.date_reserve|naturaltime }}</span>
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if validation.is_pending %}
-                        <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Réservé</a>
-                        {% elif validation.is_pending_valid %}
-                        <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Se retirer</a>
-                        {% elif validation.is_accept %}
-                        <span>Accepté</span>
-                        {% elif validation.is_reject %}
-                        <span>Rejeté</span>
-                        {% endif %}
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <a href="{% url "zds.tutorial.views.view_tutorial" validation.tutorial.pk validation.tutorial.slug %}?version={{ validation.version }}" >{{ validation.tutorial.title }}</a>
+                        </td>
+                        <td>
+                            {% for subcategory in validation.tutorial.subcategory.all %}
+                                <p>
+                                    <a href="{% url "zds.tutorial.views.list_validation" %}?subcategory={{subcategory.pk}}">{{ subcategory.title }}</a>
+                                </p>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            {% for author in validation.tutorial.authors.all %}
+                                <a href="{% url "zds.member.views.details" user.username %}">{{ author.username }}</a>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            <span>{{ validation.date_proposition|naturaltime }}</span>
+                        </td>
+                        <td>
+                            {% if validation.validator %}
+                                <a href="{% url "zds.member.views.details" validation.validator.username %}">{{ validation.validator.username }}</a>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if validation.date_reserve %}
+                                <span>{{ validation.date_reserve|naturaltime }}</span>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if validation.is_pending %}
+                                <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Réservé</a>
+                            {% elif validation.is_pending_valid %}
+                                <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Se retirer</a>
+                            {% elif validation.is_accept %}
+                                <span>Accepté</span>
+                            {% elif validation.is_reject %}
+                                <span>Rejeté</span>
+                            {% endif %}
+                        </td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
-        {% else %}
+    {% else %}
         <p>Aucun tutoriel soumis en validation.</p>
-        {% endif %}
-    </div>
-</div>
-
+    {% endif %}
 {% endblock %}
